external-crates/move/crates/move-compiler/tests/move_2024/expansion/macro_identifier_invalid_position.exp
error[E02010]: invalid name
  ┌─ tests/move_2024/expansion/macro_identifier_invalid_position.move:1:9
  │
1 │ address $a {
  │         ^^ Invalid address name '$a'. Identifiers starting with '$' can be used only for parameters and type paramters

error[E02010]: invalid name
  ┌─ tests/move_2024/expansion/macro_identifier_invalid_position.move:2:8
  │
2 │ module $m {}
  │        ^^ Invalid module name '$m'. Identifiers starting with '$' can be used only for parameters and type paramters

error[E02010]: invalid name
  ┌─ tests/move_2024/expansion/macro_identifier_invalid_position.move:5:8
  │
5 │ module $a::m {}
  │        ^^ Invalid address name '$a'. Identifiers starting with '$' can be used only for parameters and type paramters

error[E02010]: invalid name
  ┌─ tests/move_2024/expansion/macro_identifier_invalid_position.move:6:8
  │
6 │ module $b::m {}
  │        ^^ Invalid address name '$b'. Identifiers starting with '$' can be used only for parameters and type paramters

